--- a/client/src/sass/base/_typography.scss
+++ b/client/src/sass/base/_typography.scss
@@ -172,7 +172,7 @@ body {
     &--form {
         display: block;
         width: 100%;
-        font-size: 2.7rem;
+        font-size: 2.5rem;
         font-weight: 900;
         line-height: 3.5rem;
         letter-spacing: 0px;
