--- a/client/src/sass/components/_modal.scss
+++ b/client/src/sass/components/_modal.scss
@@ -4,7 +4,9 @@
 
 .popup-content {
     width: 50% !important;
-    z-index: 9000;
+    z-index: 9000 !important;
+    overflow: scroll !important;
+    height: 50rem !important;
 
     @include breakpoint(phone) {
         width: 100% !important;
