--- a/client/src/sass/pages/_rent.scss
+++ b/client/src/sass/pages/_rent.scss
@@ -6,6 +6,9 @@
         $color-grey-dark-3,
         $color-black
     );
+    height: 100vh;
+    width: 100%;
+    display: table;
     // background-color: $color-white;
 }
 
